<resources>
    <string name="app_name">CampyBeHappy</string>
    <string name="app_title">Campy Be Happy</string>
    <string name="app_subtitle">Camping App</string>
    <string name="hello_text">Hello there, Welcome Back</string>
    <string name="sign_in_text">Sign In to continue</string>
    <string name="fullName_hint">Full Name</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forget_password_text">Forget Password</string>
    <string name="btnSignIn">SignIN</string>
    <string name="btn_goRegister">New User? SIGN UP</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_getStarted">Sign UP to get Started</string>
    <string name="btnSignUp">GO</string>
    <string name="btn_goLogin">Already have an account ? LogIn</string>
    <string name="logo_transName">logo_image</string>
    <string name="title_frag1">Silence</string>
    <string name="title_frag2">Happiness</string>
    <string name="title_frag3">Adventure</string>
    <string name="text_frag1">Observe the therapeutic scene over night</string>
    <string name="text_frag2">Camping in wilderness, Enjoy our mother nature</string>
    <string name="forest_img">forest_img</string>
    <string name="sea_img">sea_img</string>
    <string name="text_frag3">Experience the Wonderful life in the beautiful Sahara</string>
    <string name="sahara_img">sahara_img</string>
    <string name="dots_frag3">dots_frag3</string>
    <string name="dots_frag2">dots_frag2</string>
    <string name="dots_frag1">dots_frag1</string>
    <string name="skip_link">Skip</string>
    <string name="app_developper">Developpers</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite_camps">Favorite Camps</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="camp_history">Camp History</string>
    <string name="add_camping">Add Camping</string>

    //
    <string name="personal_profile">Personal Profile</string>
    <string name="numFollowing">18</string>
    <string name="textFollowing">Following</string>
    <string name="numFollower">125</string>
    <string name="textFollower">Follower</string>
    <string name="numBrowse">50</string>
    <string name="textBrowse">Browse</string>
    <string name="textSituation">Situation</string>
    <string name="numOutput">2186.25</string>
    <string name="numInput">1200.26</string>
    <string name="TextCollections">Collections</string>
    <string name="textSettings">Settings</string>
    <string name="textSafety">Safety</string>
    <string name="my_favorite_camps">My Favorite Camps</string>
    <string name="my_camps_history">My Camps History</string>
    <string name="chekFullName">Please enter a correct value!</string>
    <string name="chekUserName">Length UserName Minimum 5 Character !</string>
    <string name="chekEmail">Please enter a correct value!</string>
    <string name="chekPasswored">Please enter a correct value!</string>
    <string name="errorpassw">The field cannot be empty</string>
    <string name="errorpass2">Please enter a valid Password :/</string>
    <string name="erreremail">Please enter a valid email address !</string>
</resources>